--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
             <div class="country-section">
                 <img src="images/flag.webp" />
                 <span class="language">EN</span>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+
+            <div class="location account-section">
+                <p>Hello, sign in</p>
+                <h4>Account & Lists</h4>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+
+            <div class="location return-section">
+                <p>Return</p>
+                <h4>& Order</h4>
+            </div>
+
+            <div class="cart">
+                <i class="fa-solid fa-cart-shopping"></i>
+                <span class="cart-detail">Cart</span>
             </div>
         </div>
     </div>
