--- a/index.html
+++ b/index.html
@@ -84,104 +84,198 @@
     </div>
 
     <!-- carousel -->
-    <div class="carousel">
-        <div class="carousel-section">
-            <img src="images/carousel1.jpg" alt="Loading">
+    <!-- <div class="carousel"> -->
+    <!-- <div class="mobile-section carouselImg">
+            <img src="images/mobileimg.jpg" alt="Loading">
+        </div> -->
+    <div class="item-section">
+        <div class="item1">
+            <h2>Appliances for your home |<br> Up to 55% off</h2>
+            <div class="box">
+                <div class="boxItem">
+                    <img src="images/item1.jpg" alt="Loading">
+                    <p>Air conditioners</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/refrigator.jpg" alt="Loading">
+                    <p>Refrigerators</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/microwave.jpg" alt="Loading">
+                    <p>Microwaves</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/washingMachine.jpg" alt="Loading">
+                    <p>Washing machines</p>
+                </div>
+            </div>
+            <a href="#">See more</a>
         </div>
-        <div class="item-section">
-            <div class="item1">
-                <h2>Appliances for your home |<br> Up to 55% off</h2>
-                <div class="box">
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Air conditioners</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Refrigerators</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Microwaves</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Washing machines</p>
-                    </div>
-                </div>
-                <a href="#">See more</a>
-            </div>
 
-            <div class="item1">
-                <h2>Appliances for your home | Up to 55% off</h2>
-                <div class="box">
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Air conditioners</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Refrigerators</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Microwaves</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Washing machines</p>
-                    </div>
+        <div class="item1">
+            <h2>Revamp your home in style</h2>
+            <div class="box">
+                <div class="boxItem">
+                    <img src="images/badsheet.jpg" alt="Loading">
+                    <p>Air conditioners</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/fingurues.jpg" alt="Loading">
+                    <p>Refrigerators</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/Homestorage.jpg" alt="Loading">
+                    <p>Microwaves</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/lightin.jpg" alt="Loading">
+                    <p>Washing machines</p>
                 </div>
             </div>
+            <a href="#">Explore all</a>
+        </div>
 
-            <div class="item1">
-                <h2>Appliances for your home | Up to 55% off</h2>
-                <div class="box">
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Air conditioners</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Refrigerators</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Microwaves</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Washing machines</p>
-                    </div>
+        <div class="item1">
+            <h2>PlayStation 5 Slim & Accessories | No Cost EMI*</h2>
+            <div class="box">
+                <div class="boxItem">
+                    <img src="images/pss.jpg" alt="Loading">
+                    <p>Air conditioners</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/pssSlim.jpg" alt="Loading">
+                    <p>Refrigerators</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/pssSlimLigh.jpg" alt="Loading">
+                    <p>Microwaves</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/remote.jpg" alt="Loading">
+                    <p>Washing machines</p>
                 </div>
             </div>
+            <a href="#">See all deals</a>
+        </div>
 
-            <div class="item1">
-                <h2>Appliances for your home | Up to 55% off</h2>
-                <div class="box">
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Air conditioners</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Refrigerators</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Microwaves</p>
-                    </div>
-                    <div class="boxItem">
-                        <img src="images/item1.jpg" alt="Loading">
-                        <p>Washing machines</p>
+        <div class="item2">
+            <div class="signBtn">
+                <h2>Sign in for your best experience</h2>
+                <button><a href="#">sign in securely</a></button>
+            </div>
+            <div class="itemZebronic">
+                <div class="zebronicSpeaker">
+                    <img class="zebSpeakarImg" src="images/zebronicsLogo.webp">
+                    <img class="zebLogoImg" src="images/zebronic.jpg">
+                </div>
+                <div class="zebronicDetials">
+                    <h5>ZEBRONICS JUKE BAR 9000 SoundBar,...</h5>
+                    <img class="ratings" src="images/rating4.5.png">
+                    <div class="priceTag">
+                        <div class="price"><i class="fa-solid fa-indian-rupee-sign"></i><span>2,8999</span><span
+                                class="zero">00</span></div>
+                        <div class="priceCross"><i class="fa-solid fa-indian-rupee-sign"></i><span>848,999</span></div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <div class="item-section">
+        <div class="item1">
+            <h2>Appliances for your home |<br> Up to 55% off</h2>
+            <div class="box">
+                <div class="boxItem">
+                    <img src="images/item1.jpg" alt="Loading">
+                    <p>Air conditioners</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/refrigator.jpg" alt="Loading">
+                    <p>Refrigerators</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/microwave.jpg" alt="Loading">
+                    <p>Microwaves</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/washingMachine.jpg" alt="Loading">
+                    <p>Washing machines</p>
+                </div>
+            </div>
+            <a href="#">See more</a>
+        </div>
+
+        <div class="item1">
+            <h2>Revamp your home in style</h2>
+            <div class="box">
+                <div class="boxItem">
+                    <img src="images/badsheet.jpg" alt="Loading">
+                    <p>Air conditioners</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/fingurues.jpg" alt="Loading">
+                    <p>Refrigerators</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/Homestorage.jpg" alt="Loading">
+                    <p>Microwaves</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/lightin.jpg" alt="Loading">
+                    <p>Washing machines</p>
+                </div>
+            </div>
+            <a href="#">Explore all</a>
+        </div>
+
+        <div class="item1">
+            <h2>PlayStation 5 Slim & Accessories | No Cost EMI*</h2>
+            <div class="box">
+                <div class="boxItem">
+                    <img src="images/pss.jpg" alt="Loading">
+                    <p>Air conditioners</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/pssSlim.jpg" alt="Loading">
+                    <p>Refrigerators</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/pssSlimLigh.jpg" alt="Loading">
+                    <p>Microwaves</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/remote.jpg" alt="Loading">
+                    <p>Washing machines</p>
+                </div>
+            </div>
+            <a href="#">See all deals</a>
+        </div>
+
+        <div class="item1">
+            <h2>Revamp your home in style</h2>
+            <div class="box">
+                <div class="boxItem">
+                    <img src="images/badsheet.jpg" alt="Loading">
+                    <p>Air conditioners</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/fingurues.jpg" alt="Loading">
+                    <p>Refrigerators</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/Homestorage.jpg" alt="Loading">
+                    <p>Microwaves</p>
+                </div>
+                <div class="boxItem">
+                    <img src="images/lightin.jpg" alt="Loading">
+                    <p>Washing machines</p>
+                </div>
+            </div>
+            <a href="#">Explore all</a>
+        </div>
+    </div>
+
+    <!-- </div> -->
     <script src="https://kit.fontawesome.com/3315852ddf.js" crossorigin="anonymous"></script>
-    <!-- bootstrap -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-</body>
 
 </html>
