--- a/index.html
+++ b/index.html
@@ -82,9 +82,6 @@
             </div>
         </div>
     </div>
-
-    <!-- carousel -->
-    <!-- <div class="carousel"> -->
     <!-- <div class="mobile-section carouselImg">
             <img src="images/mobileimg.jpg" alt="Loading">
         </div> -->
@@ -169,12 +166,13 @@
                     <img class="zebLogoImg" src="images/zebronic.jpg">
                 </div>
                 <div class="zebronicDetials">
-                    <h5>ZEBRONICS JUKE BAR 9000 SoundBar,...</h5>
+                    <p class="itempDetials">ZEBRONICS JUKE BAR 9000 SoundBar,...</p>
                     <img class="ratings" src="images/rating4.5.png">
                     <div class="priceTag">
                         <div class="price"><i class="fa-solid fa-indian-rupee-sign"></i><span>2,8999</span><span
                                 class="zero">00</span></div>
-                        <div class="priceCross"><i class="fa-solid fa-indian-rupee-sign"></i><span>848,999</span></div>
+                        <div class="priceCross"><del><i
+                                    class="fa-solid fa-indian-rupee-sign"></i><span>848,999</span></del></div>
                     </div>
                 </div>
             </div>
@@ -183,22 +181,22 @@
 
     <div class="item-section">
         <div class="item1">
-            <h2>Appliances for your home |<br> Up to 55% off</h2>
+            <h2>Under ₹499 | Deals on<br> home improvement</h2>
             <div class="box">
                 <div class="boxItem">
-                    <img src="images/item1.jpg" alt="Loading">
+                    <img src="images/clean1.jpg" alt="Loading">
                     <p>Air conditioners</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/refrigator.jpg" alt="Loading">
+                    <img src="images/clean2.jpg" alt="Loading">
                     <p>Refrigerators</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/microwave.jpg" alt="Loading">
+                    <img src="images/clean3.jpg" alt="Loading">
                     <p>Microwaves</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/washingMachine.jpg" alt="Loading">
+                    <img src="images/clean4.jpg" alt="Loading">
                     <p>Washing machines</p>
                 </div>
             </div>
@@ -206,22 +204,22 @@
         </div>
 
         <div class="item1">
-            <h2>Revamp your home in style</h2>
+            <h2>Starting ₹149 |<br> Headphones</h2>
             <div class="box">
                 <div class="boxItem">
-                    <img src="images/badsheet.jpg" alt="Loading">
+                    <img src="images/boat1.jpg" alt="Loading">
                     <p>Air conditioners</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/fingurues.jpg" alt="Loading">
+                    <img src="images/boat2.jpg" alt="Loading">
                     <p>Refrigerators</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/Homestorage.jpg" alt="Loading">
+                    <img src="images/boat3.jpg" alt="Loading">
                     <p>Microwaves</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/lightin.jpg" alt="Loading">
+                    <img src="images/boat4.jpg" alt="Loading">
                     <p>Washing machines</p>
                 </div>
             </div>
@@ -229,22 +227,22 @@
         </div>
 
         <div class="item1">
-            <h2>PlayStation 5 Slim & Accessories | No Cost EMI*</h2>
+            <h2>Min. 40% off | Toys & Fun games | Amazon brands</h2>
             <div class="box">
                 <div class="boxItem">
-                    <img src="images/pss.jpg" alt="Loading">
+                    <img src="images/toy1.jpg" alt="Loading">
                     <p>Air conditioners</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/pssSlim.jpg" alt="Loading">
+                    <img src="images/toy2.jpg" alt="Loading">
                     <p>Refrigerators</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/pssSlimLigh.jpg" alt="Loading">
+                    <img src="images/toy3.jpg" alt="Loading">
                     <p>Microwaves</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/remote.jpg" alt="Loading">
+                    <img src="images/toy4.jpg" alt="Loading">
                     <p>Washing machines</p>
                 </div>
             </div>
@@ -252,22 +250,22 @@
         </div>
 
         <div class="item1">
-            <h2>Revamp your home in style</h2>
+            <h2>Automotive essentials | Up to 60% off</h2>
             <div class="box">
                 <div class="boxItem">
-                    <img src="images/badsheet.jpg" alt="Loading">
+                    <img src="images/safety1.jpg" alt="Loading">
                     <p>Air conditioners</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/fingurues.jpg" alt="Loading">
+                    <img src="images/safety2.jpg" alt="Loading">
                     <p>Refrigerators</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/Homestorage.jpg" alt="Loading">
+                    <img src="images/safety3.jpg" alt="Loading">
                     <p>Microwaves</p>
                 </div>
                 <div class="boxItem">
-                    <img src="images/lightin.jpg" alt="Loading">
+                    <img src="images/safety4.jpg" alt="Loading">
                     <p>Washing machines</p>
                 </div>
             </div>
@@ -275,7 +273,168 @@
         </div>
     </div>
 
-    <!-- </div> -->
+    <div class="lastSeenProduct">
+        <h2>Related to items you've viewed</h2>
+        <a href="#">See more</a>
+        <div class="seenProductImg">
+            <img src="images/speakear1.jpg">
+            <img src="images/speakar2.jpg">
+            <img src="images/speakar3.jpg">
+            <img src="images/speakar4.jpg">
+            <img src="images/speakar.jpg">
+        </div>
+    </div>
+
+    <div class="lastSeenProduct fashionBrands">
+        <h2>Starting ₹499 | Sparkle up your everyday style</h2>
+        <a href="#">See more</a>
+        <div class="seenProductImg fashionBrandsProduct">
+            <img src="images/fashion1.jpg">
+            <img src="images/fashion2.jpg">
+            <img src="images/fashion3.jpg">
+            <img src="images/fashion4.jpg">
+            <img src="images/fashion5.jpg">
+            <img src="images/fashion6.jpg">
+        </div>
+    </div>
+
+    <div class="item-section">
+        <div class="item1">
+            <h2>Gift ideas in Women's Bangles & Bracelets</h2>
+            <div class="productBangle">
+                <div class="fashionItem">
+                    <img src="images/bangle.jpg">
+                </div>
+                <p class="itempDetials">ZAVERI PEARLS CZ Stone-Studded Foral Openable Bracket For Woman -ZPFK4800</p>
+                <div class="priceTag">
+                    <div class="price indianPrice"><i class="fa-solid fa-indian-rupee-sign"></i><span>430</span><span
+                            class="zero">00</span></div>
+                    <div class="indianCrossPrice"><span>M.R.P: </span><del><i
+                                class="fa-solid fa-indian-rupee-sign"></i><span>15,067</span></del></div>
+                </div>
+                <div class="bangleItem">
+                    <img class="active" src="images/bangle.jpg">
+                    <img src="images/bangle1.jpg">
+                    <img src="images/bangle2.jpg">
+                    <img src="images/bangle3.jpg">
+                </div>
+            </div>
+            <a href="#">Show more</a>
+        </div>
+
+        <div class="item1">
+            <h2>Keep shopping<br> for</h2>
+            <div class="productBangle">
+                <div class="fashionItem">
+                    <img src="images/neckless1.jpg">
+                </div>
+                <p class="itempDetials">ZAVERI PEARLS CZ Stone-Studded Foral Openable Bracket For Woman -ZPFK4800</p>
+                <div class="priceTag">
+                    <div class="price indianPrice"><i class="fa-solid fa-indian-rupee-sign"></i><span>430</span><span
+                            class="zero">00</span></div>
+                    <div class="indianCrossPrice"><span>M.R.P: </span><del><i
+                                class="fa-solid fa-indian-rupee-sign"></i><span>15,067</span></del></div>
+                </div>
+                <div class="bangleItem">
+                    <img class="active" src="images/neckless2.jpg">
+                    <img src="images/neckless3.jpg">
+                    <img src="images/neckless4.jpg">
+                    <img src="images/neckless5.jpg">
+                </div>
+            </div>
+            <a href="#">Show more</a>
+        </div>
+
+        <div class="item1">
+            <h2>Customers’ Most-Loved Fashion for you</h2>
+            <div class="productBangle">
+                <div class="fashionItem">
+                    <img src="images/fashionNeckless.jpg">
+                </div>
+                <p class="itempDetials">ZAVERI PEARLS CZ Stone-Studded Foral Openable Bracket For Woman -ZPFK4800</p>
+                <div class="priceTag">
+                    <div class="price indianPrice"><i class="fa-solid fa-indian-rupee-sign"></i><span>430</span><span
+                            class="zero">00</span></div>
+                    <div class="indianCrossPrice"><span>M.R.P: </span><del><i
+                                class="fa-solid fa-indian-rupee-sign"></i><span>15,067</span></del></div>
+                </div>
+                <div class="bangleItem">
+                    <img class="active" src="images/fashionNeckless.jpg">
+                    <img src="images/fashionNeckless2.jpg">
+                    <img src="images/fashionNeckless3.jpg">
+                    <img src="images/fashionNeckless1.jpg">
+                </div>
+            </div>
+            <a href="#">Show more</a>
+        </div>
+
+        <div class="item1">
+            <h2>Pick up where you<br> left off</h2>
+            <div class="productBangle">
+                <div class="fashionItem">
+                    <img src="images/speakar.jpg">
+                </div>
+                <p class="itempDetials">ZAVERI PEARLS CZ Stone-Studded Foral Openable Bracket For Woman
+                    -ZPFK4800</p>
+                <div class="priceTag">
+                    <div class="price indianPrice"><i class="fa-solid fa-indian-rupee-sign"></i><span>430</span><span
+                            class="zero">00</span></div>
+                    <div class="indianCrossPrice"><span>M.R.P: </span><del><i
+                                class="fa-solid fa-indian-rupee-sign"></i><span>15,067</span></del></div>
+                </div>
+                <div class="bangleItem">
+                    <img class="active" src="images/speakar.jpg">
+                    <img src="images/speakar2.jpg">
+                    <img src="images/speakar3.jpg">
+                    <img src="images/speakar4.jpg">
+                </div>
+            </div>
+            <a href="#">Show more</a>
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="backTopFooter">
+            <p>Back to top</p>
+        </div>
+            <div class="mainFooter">
+                <div class="subfooter">
+                    <h4>Get to Know<br> Us</h4>
+                    <li><a href="#">About Amazon</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Press Releases</a></li>
+                    <li><a href="#">Amazon Science</a></li>
+                </div>
+                <div class="subfooter">
+                    <h4>Connect with<br> Us</h4>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </div>
+                <div class="subfooter">
+                    <h4>Make Money with Us</h4>
+                    <li><a href="#">Sell on Amazon</a></li>
+                    <li><a href="#">Sell under Amazon<br> Accelerator</a></li>
+                    <li><a href="#">Protect and Build Your Brand</a></li>
+                    <li><a href="#">Amazon Global Selling</a></li>
+                    <li><a href="#">Supply to Amazon</a></li>
+                    <li><a href="#">Become an Affiliate</a></li>
+                    <li><a href="#">Fulfilment by Amazon</a></li>
+                    <li><a href="#">Advertise Your Products</a></li>
+                    <li><a href="#">Amazon Pay on Merchants</a></li>
+                </div>
+                <div class="subfooter">
+                    <h4>Let Us help you</h4>
+                    <li><a href="#">Your Account</a></li>
+                    <li><a href="#">Returns Centre</a></li>
+                    <li><a href="#">Recalls and Product Safety<br> Alerts</a></li>
+                    <li><a href="#">100% Purchase Protection</a></li>
+                    <li><a href="#">Amazon App Download</a></li>
+                    <li><a href="#">Help</a></li>
+                </div>
+            </div>
+    </div>
+
     <script src="https://kit.fontawesome.com/3315852ddf.js" crossorigin="anonymous"></script>
 
 </html>
